--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>
-    </title>
+    <meta http-equiv="content-type" content="text/html" charset="utf-8">
+    <title>Web bán đồ nội thất</title>
   </head>
   <body>
 
   </body>
-</html>
+</html>   
