--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="./css/footer.css"> 
     <title>Web bán đồ nội thất</title>
   </head>
-  <body style="height: 3000px">
-    <div class="header-container">
+  <body>
+    <div class="header-ctn">
       <div class="header-middle-section">
         <a href="#">Home</a>
         <a href="./shop.html">Shop</a>
@@ -28,26 +28,27 @@
       </div>
     </div>
 
-    <div class="thumbnail-container">
-      <div class="thumbnail-title-container">
+    <div class="thumbnail-ctn">
+      <div class="thumbnail-title-ctn">
         <p>Rocket single seater</p>
         <a href="./shop.html">Shop Now</a>
       </div>
       <img class="thumbnail-image" src="assets/imgs/rocket_single_seater.png" alt="Rocket Single Seater">
     </div>
-    <div class="sidetable-section-container">
-      <div class="sidetable-container">
+
+    <div class="sidetable-section-ctn">
+      <div class="sidetable-ctn">
         <div>
-          <img src="assets/imgs/side_table_1.png" alt="side-table-1">
+          <img class="sidetable-img" src="assets/imgs/side_table_1.png" alt="side-table-1">
         </div>
         <div class="sidetable-title">
           <p>Side Table</p>
           <a href="./shop.html">View More</a>
         </div>
       </div>
-      <div class="sidetable-container">
+      <div class="sidetable-ctn">
         <div>
-          <img src="assets/imgs/side_table_2.png" alt="side-table-2">
+          <img class="sidetable-img" src="assets/imgs/side_table_2.png" alt="side-table-2">
         </div>
         <div class="sidetable-title">
           <p>Side Table</p>
@@ -55,6 +56,11 @@
         </div>
       </div>
     </div>
-    <div class="footer-container"></div>
+
+    <div class="top-pick-ctn">
+      
+    </div>
+
+    <div class="footer-ctn"></div>
   </body>
 </html>
