Add footer to index.html and update footer.css

--- a/index.html
+++ b/index.html
@@ -61,6 +61,34 @@
       
     </div>
 
-    <div class="footer-ctn"></div>
+    <div class="footer-ctn">
+      <div class="footer-sections-ctn">
+        <div class="footer-section address-section">
+          <p>400 University Drive Suite 200 Coral Gables,<br>FL 33134 USA</p>
+        </div> 
+        <div class="footer-section links-section">
+          <p>Links</p>
+          <a href="./index.html">Home</a>
+          <a href="./shop.html">Shop</a>
+          <a href="./about.html">About</a>
+          <a href="./contact.html">Contact</a>
+        </div> 
+        <div class="footer-section help-section">
+          <p>Help</p>
+          <a href="#">Payment Options</a>
+          <a href="#">Returns</a>
+          <a href="#">Privacy Policies</a>
+        </div> 
+        <div class="footer-section newsletter-section">
+          <p>Newsletter</p>
+          <div>
+            <input id="email-input" type="text" name="email" placeholder="Enter Your Email Address">
+            <button class="subscribe-btn">SUBSCRIBE</button>
+          </div>
+        </div> 
+      </div>
+      <hr>
+      <p class="copyright-text">2022 Meubel House. All rights reverved</p>
+    </div>
   </body>
 </html>
