--- a/index.html
+++ b/index.html
@@ -2,32 +2,15 @@
   <head>
     <meta http-equiv="content-type" content="text/html" charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <!-- delete this line on release -->
     <link rel="stylesheet" href="./css/general.css">
-    <link rel="stylesheet" href="./css/header.css"> 
     <link rel="stylesheet" href="./css/home.css">
-    <link rel="stylesheet" href="./css/footer.css"> 
-    <title>Web bán đồ nội thất</title>
+    <title>Home</title>
+    <script src="scripts/header.js"></script>
+    <script src="scripts/footer.js"></script>
   </head>
   <body>
-    <div class="header-ctn">
-      <div class="header-middle-section">
-        <a href="#">Home</a>
-        <a href="./shop.html">Shop</a>
-        <a href="./about.html">About</a>
-        <a href="./contact.html">Contact</a>
-      </div>
-      <div class="header-right-section">
-        <button><img class="account-alert-icon" src="assets/icons/account_alert.svg"></button>
-        <button><img class="search-icon" src="assets/icons/search.svg"></button>
-        <button><img class="heart-icon" src="assets/icons/heart.svg"></button>
-        <button><img class="shopping-cart-icon" src="assets/icons/shopping_cart.svg"></button>
-      </div>
-    </div>
-
+    <!--Must import header.js for this to work-->
+    <header-component></header-component>
     <div class="thumbnail-ctn">
       <div class="thumbnail-title-ctn">
         <p>Rocket single seater</p>
@@ -58,37 +41,8 @@
     </div>
 
     <div class="top-pick-ctn">
-      
     </div>
 
-    <div class="footer-ctn">
-      <div class="footer-sections-ctn">
-        <div class="footer-section address-section">
-          <p>400 University Drive Suite 200 Coral Gables,<br>FL 33134 USA</p>
-        </div> 
-        <div class="footer-section links-section">
-          <p>Links</p>
-          <a href="./index.html">Home</a>
-          <a href="./shop.html">Shop</a>
-          <a href="./about.html">About</a>
-          <a href="./contact.html">Contact</a>
-        </div> 
-        <div class="footer-section help-section">
-          <p>Help</p>
-          <a href="#">Payment Options</a>
-          <a href="#">Returns</a>
-          <a href="#">Privacy Policies</a>
-        </div> 
-        <div class="footer-section newsletter-section">
-          <p>Newsletter</p>
-          <div>
-            <input id="email-input" type="text" name="email" placeholder="Enter Your Email Address">
-            <button class="subscribe-btn">SUBSCRIBE</button>
-          </div>
-        </div> 
-      </div>
-      <hr>
-      <p class="copyright-text">2022 Meubel House. All rights reverved</p>
-    </div>
+    <footer-component></footer-component>
   </body>
 </html>
