--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
   <head>
     <meta http-equiv="content-type" content="text/html" charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/general.css">
-    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="/css/general.css">
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/product.css">
     <title>Home</title>
-    <script src="scripts/header.js"></script>
-    <script src="scripts/footer.js"></script>
+    <script src="/scripts/header.js"></script>
+    <script src="/scripts/footer.js"></script>
+    <script type="module" src="/scripts/product.js"></script>
   </head>
   <body>
     <!--Must import header.js for this to work-->
@@ -14,35 +16,40 @@
     <div class="thumbnail-ctn">
       <div class="thumbnail-title-ctn">
         <p>Rocket single seater</p>
-        <a href="./shop.html">Shop Now</a>
+        <a class="view-more-btn" href="./shop.html">Shop Now</a>
       </div>
-      <img class="thumbnail-image" src="assets/imgs/rocket_single_seater.png" alt="Rocket Single Seater">
+      <img class="thumbnail-image" src="/assets/imgs/rocket_single_seater.png" alt="Rocket Single Seater">
     </div>
 
     <div class="sidetable-section-ctn">
       <div class="sidetable-ctn">
         <div>
-          <img class="sidetable-img" src="assets/imgs/side_table_1.png" alt="side-table-1">
+          <img class="sidetable-img" src="/assets/imgs/side_table_1.png" alt="side-table-1">
         </div>
         <div class="sidetable-title">
-          <p>Side Table</p>
-          <a href="./shop.html">View More</a>
+          <p>Side table</p>
+          <a href="/shop.html" class="view-more-btn">View More</a>
         </div>
       </div>
       <div class="sidetable-ctn">
         <div>
-          <img class="sidetable-img" src="assets/imgs/side_table_2.png" alt="side-table-2">
+          <img class="sidetable-img" src="/assets/imgs/side_table_2.png" alt="side-table-2">
         </div>
         <div class="sidetable-title">
-          <p>Side Table</p>
-          <a href="./shop.html">View More</a>
+          <p>Side table</p>
+          <a href="/shop.html" class="view-more-btn">View More</a>
         </div>
       </div>
     </div>
 
-    <div class="top-pick-ctn">
+    <div class="toppick-ctn">
+      <span class="toppick-title txt-s-36 txt-w-500">Top Picks For You</span>
+      <span class="toppick-caption txt-s-16 txt-w-500">Find a bright ideal to suit your taste with our great selection of suspension, floor and table lights.</span>
+      <div class="products-view"></div>
+      <a class="view-more-btn txt-s-20 txt-w-500" href="/shop.html">View More</a>
     </div>
 
+    <!--Must import footer.js for this to work-->
     <footer-component></footer-component>
   </body>
 </html>
