--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
   <head>
     <meta http-equiv="content-type" content="text/html" charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/general.css">
-    <link rel="stylesheet" href="/css/home.css">
-    <link rel="stylesheet" href="/css/product.css">
+    <link rel="stylesheet" href="./css/general.css">
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/product.css">
     <title>Home</title>
-    <script src="/scripts/header.js"></script>
-    <script src="/scripts/footer.js"></script>
-    <script type="module" src="/scripts/product.js"></script>
+    <script src="./scripts/header.js"></script>
+    <script src="./scripts/footer.js"></script>
+    <script type="module" src="./scripts/home.js"></script>
   </head>
   <body>
     <!--Must import header.js for this to work-->
@@ -48,6 +48,23 @@
       <div class="products-view"></div>
       <a class="view-more-btn txt-s-20 txt-w-500" href="/shop.html">View More</a>
     </div>
+
+    <div class="new-arrivals-section-ctn">
+      <div class="new-arrivals-ctn">
+        <div class="new-arrivals-img-ctn">
+          <img class="product-img" src="assets/products/asgaard_sofa.png">
+        </div>
+        <div class="new-arrivals-title-ctn">
+          <p class="txt-s-24">New Arrivals</p>
+          <p class="product-name txt-s-48 txt-w-700">Placeholder</p>
+          <button class="order-btn">Order Now</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="blog-section">
+      
+    </div
 
     <!--Must import footer.js for this to work-->
     <footer-component></footer-component>
