update: homepage and singleproduct

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
 
     <div class="sidetable-section-ctn">
       <div class="sidetable-ctn">
-        <div>
           <img class="sidetable-img" src="/assets/imgs/side_table_1.png" alt="side-table-1">
-        </div>
         <div class="sidetable-title">
           <p>Side table</p>
           <a href="/shop.html" class="view-more-btn">View More</a>
@@ -43,8 +41,8 @@
     </div>
 
     <div class="toppick-ctn">
-      <span class="toppick-title txt-s-36 txt-w-500">Top Picks For You</span>
-      <span class="toppick-caption txt-s-16 txt-w-500">Find a bright ideal to suit your taste with our great selection of suspension, floor and table lights.</span>
+      <span class="section-title txt-s-36 txt-w-500">Top Picks For You</span>
+      <span class="section-caption txt-s-16 txt-w-500">Find a bright ideal to suit your taste with our great selection of suspension, floor and table lights.</span>
       <div class="products-view"></div>
       <a class="view-more-btn txt-s-20 txt-w-500" href="/shop.html">View More</a>
     </div>
@@ -63,8 +61,23 @@
     </div>
 
     <div class="blog-section">
-      
-    </div
+      <span class="section-title txt-s-36 txt-w-500">Our Blogs</span>
+      <span class="section-caption txt-s-16 txt-w-500">Find a bright ideal to suit your taste with our great selection</span>
+      <div class="blogs-view"></div>
+      <div class="view-all-btn">
+        <a class="txt-s-20 txt-w-500" href="/blog.html">View All Post</a>
+        <hr class="button-line">
+      </div>
+    </div>
+
+    <div class="social-media-section">
+      <div class="social-media-img"></div>
+      <div class="social-media-ctn">
+        <span class="txt-s-60 txt-w-700">Our Instagram</span>
+        <span class="txt-s-20">Follow our store on Instagram</span>
+        <a class="follow-btn txt-s-20" href="https://instagram.com" target="_blank">Follow Us</a>
+      </div>
+    </div>
 
     <!--Must import footer.js for this to work-->
     <footer-component></footer-component>
