--- a/shop.html
+++ b/shop.html
@@ -12,7 +12,7 @@
     <!--Must import header.js for this to work-->
     <header-component></header-component>
 
-    <!--Must import footer.js for this to work-->
+    <!--Must import policies.js for this to work-->
     <policies-component></policies-component>
     <!--Must import footer.js for this to work-->
     <footer-component></footer-component>
