update: finalize index.html (homepage)

--- a/singleproduct.html
+++ b/singleproduct.html
@@ -3,6 +3,7 @@
     <meta http-equiv="content-type" content="text/html" charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/general.css">
+    <link rel="stylesheet" href="./css/breadcrumb.css">
     <link rel="stylesheet" href="./css/singleproduct.css">
     <title>Shop</title>
     <script type="module" src="./scripts/header.js"></script>
@@ -14,8 +15,8 @@
     <header-component></header-component>
     <div class="breadcrumb">
       <div class="breadcrumb-ctn">
-        <span><a class="txt-caption txt-s-16" href="./">Home</a></span>
-        <span><a class="txt-caption txt-s-16" href="./shop.html">Shop</a></span>
+        <span><a class="txt-caption txt-s-16 " href="./">Home</a></span>
+        <span><a class="txt-caption txt-s-16 " href="./shop.html">Shop</a></span>
         <span class="product-name txt-s-16 txt-w-400">hello</span>
       </div>
     </div>
