--- a/account.html
+++ b/account.html
@@ -3,7 +3,8 @@
     <meta http-equiv="content-type" content="text/html" charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/general.css">
-    <title>Shop</title>
+    <link rel="stylesheet" href="./css/banner.css">
+    <title>My Account</title>
     <script src="./scripts/header.js"></script>
     <script src="./scripts/footer.js"></script>
     <script src="./scripts/policies.js"></script>
@@ -11,6 +12,17 @@
   <body>
     <!--Must import header.js for this to work-->
     <header-component></header-component>
+    <div class="banner">
+      <img class="banner-background" src="./assets/imgs/thumbnail_breadcrumb.jpg">
+      <div>
+        <img src="./assets/icons/meubel_house.svg">
+        <span class="banner-title txt-s-48 txt-w-500">My Account</span>
+        <div class="banner-ctn">
+          <span><a class="txt-w-500 txt-s-16" href="./">Home</a></span>
+          <span><a class="txt-w-300 txt-s-16" href="#">My Account</a></span>
+        </div>
+      </div>
+    </div>
 
     <!--Must import footer.js for this to work-->
     <policies-component></policies-component>
