--- a/checkout.html
+++ b/checkout.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/general.css">
     <link rel="stylesheet" href="./css/banner.css">
-    <title>Contact</title>
+    <title>Checkout</title>
     <script src="scripts/header.js"></script>
     <script src="scripts/footer.js"></script>
   </head>
@@ -15,10 +15,10 @@
       <img class="banner-background" src="./assets/imgs/thumbnail_breadcrumb.jpg">
       <div>
         <img src="./assets/icons/meubel_house.svg">
-        <span class="banner-title txt-s-48 txt-w-500">Contact</span>
+        <span class="banner-title txt-s-48 txt-w-500">Checkout</span>
         <div class="banner-ctn">
           <span><a class="txt-w-500 txt-s-16" href="./">Home</a></span>
-          <span><a class="txt-w-300 txt-s-16" href="#">Contact</a></span>
+          <span><a class="txt-w-300 txt-s-16" href="#">Checkout</a></span>
         </div>
       </div>
     </div>
