--- a/shop.html
+++ b/shop.html
@@ -9,10 +9,12 @@
     <script src="./scripts/header.js"></script>
     <script src="./scripts/footer.js"></script>
     <script src="./scripts/policies.js"></script>
+    <script src="./scripts/shop.js"></script>
   </head>
   <body>
     <!--Must import header.js for this to work-->
     <header-component></header-component>
+
     <div class="banner">
       <img class="banner-background" src="./assets/imgs/thumbnail_breadcrumb.jpg">
       <div>
@@ -24,7 +26,10 @@
         </div>
       </div>
     </div>
+
     <div class="option-bar"></div>
+
+    <div class="container"></div>
 
     <!--Must import policies.js for this to work-->
     <policies-component></policies-component>
