--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
     <script src="./scripts/header.js"></script>
     <script src="./scripts/footer.js"></script>
     <script src="./scripts/policies.js"></script>
-    <script src="./scripts/shop.js"></script>
+    <script type="module" src="./scripts/shop.js"></script>
   </head>
   <body>
     <!--Must import header.js for this to work-->
@@ -27,9 +27,32 @@
       </div>
     </div>
 
-    <div class="option-bar"></div>
+    <div class="option-bar">
+      <div>
+        <img class="icon filter-icon" src="./assets/icons/filtering.svg">
+        <span>Filter</span>
+        <input type="radio" name="grid" value="grid">
+        <label for="grid"><img class="icon grid-big-round-icon" src="./assets/icons/grid-big-round.svg"></label>
+        <input type="radio" name="list" value="list">
+        <label for="list"><img class="icon view-list-icon" src="./assets/icons/view-list.svg"></label>
+        <div class="filter-result">
+          <span id="filter-result"></span>
+        </div>
+      </div>
+      <div>
+        <label for="show">Show</label>
+        <input class="show-count-input" id="show-count-input" type="number" name="show" value="16">
+        <label for="sort">Sort by</label>
+        <select class="sort-sel" name="sort" id="sort">
+          <option value="Default">Default</option>
+          <option value="Alphabetical">Alphabetical</option>
+          <option value="Popularity">Popularity</option>
+          <option value="Rating">Rating</option>
+        </select>
+      </div>
+    </div>
 
-    <div class="container"></div>
+    <div class="products-ctn"></div>
 
     <!--Must import policies.js for this to work-->
     <policies-component></policies-component>
