--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <p>Rocket single seater</p>
         <a class="view-more-btn" href="./shop.html">Shop Now</a>
       </div>
-      <img class="thumbnail-image" src="/assets/imgs/rocket_single_seater.png" alt="Rocket Single Seater">
+      <img class="thumbnail-image" src="./assets/imgs/rocket_single_seater.png" alt="Rocket Single Seater">
     </div>
 
     <div class="sidetable-section-ctn">
       <div class="sidetable-ctn">
-          <img class="sidetable-img" src="/assets/imgs/side_table_1.png" alt="side-table-1">
+          <img class="sidetable-img" src="./assets/imgs/side_table_1.png" alt="side-table-1">
         <div class="sidetable-title">
           <p>Side table</p>
           <a href="/shop.html" class="view-more-btn">View More</a>
@@ -31,7 +31,7 @@
       </div>
       <div class="sidetable-ctn">
         <div>
-          <img class="sidetable-img" src="/assets/imgs/side_table_2.png" alt="side-table-2">
+          <img class="sidetable-img" src="./assets/imgs/side_table_2.png" alt="side-table-2">
         </div>
         <div class="sidetable-title">
           <p>Side table</p>
@@ -44,7 +44,7 @@
       <span class="section-title txt-s-36 txt-w-500">Top Picks For You</span>
       <span class="section-caption txt-s-16 txt-w-500">Find a bright ideal to suit your taste with our great selection of suspension, floor and table lights.</span>
       <div class="products-view"></div>
-      <a class="view-more-btn txt-s-20 txt-w-500" href="/shop.html">View More</a>
+      <a class="view-more-btn txt-s-20 txt-w-500" href="./shop.html">View More</a>
     </div>
 
     <div class="new-arrivals-section-ctn">
@@ -65,7 +65,7 @@
       <span class="section-caption txt-s-16 txt-w-500">Find a bright ideal to suit your taste with our great selection</span>
       <div class="blogs-view"></div>
       <div class="view-all-btn">
-        <a class="txt-s-20 txt-w-500" href="/blog.html">View All Post</a>
+        <a class="txt-s-20 txt-w-500" href="./blog.html">View All Post</a>
         <hr class="button-line">
       </div>
     </div>
