update: slider for single product

--- a/singleproduct.html
+++ b/singleproduct.html
@@ -23,18 +23,30 @@
     <div class="main-ctn">
       <div class="product-images-ctn">
         <div class="product-gallery">
-          <div class="gallery-slide">
-            <div class="gallery-img-ctn"><img class="gallery-img" src=""></div>
-            <div class="gallery-img-ctn"><img class="gallery-img" src=""></div>
-            <div class="gallery-img-ctn"><img class="gallery-img" src=""></div>
-            <div class="gallery-img-ctn"><img class="gallery-img" src=""></div>
-            <div class="gallery-img-ctn"><img class="gallery-img" src=""></div>
-            <div class="gallery-img-ctn"><img class="gallery-img" src=""></div>
-            <div class="gallery-img-ctn"><img class="gallery-img" src=""></div>
-            <div class="gallery-img-ctn"><img class="gallery-img" src=""></div>
+          <button class="slide-btn gallery-prev">
+            <div class="slide-icon">
+              <img src="assets/icons/arrow.svg" style="transform:
+                rotate(-90deg); opacity: 0.5">
+            </div>
+          </button>
+          <div class="slider">
+            <div class="gallery-slide">
+              <div class="gallery-item"><img class="gallery-img" src=""></div>
+              <div class="gallery-item"><img class="gallery-img" src=""></div>
+              <div class="gallery-item"><img class="gallery-img" src=""></div>
+              <div class="gallery-item"><img class="gallery-img" src=""></div>
+              <div class="gallery-item"><img class="gallery-img" src=""></div>
+              <div class="gallery-item"><img class="gallery-img" src=""></div>
+              <div class="gallery-item"><img class="gallery-img" src=""></div>
+              <div class="gallery-item"><img class="gallery-img" src=""></div>
+            </div>
           </div>
-          <button class="slide-btn gallery-prev">Prev</button>
-          <button class="slide-btn gallery-next">Next</button>
+          <button class="slide-btn gallery-next">
+            <div class="slide-icon">
+              <img src="assets/icons/arrow.svg" style="transform: rotate(90deg);
+              opacity: 0.5">
+            </div>
+          </button>
         </div>
         <div class="main-img-ctn"><img src=""></div>
       </div>
