--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Contact</title>
     <script src="scripts/header.js"></script>
     <script src="scripts/footer.js"></script>
+    <script src="scripts/policies.js"></script>
   </head>
   <body>
     <!--Must import header.js for this to work-->
@@ -22,6 +23,9 @@
         </div>
       </div>
     </div>
+
+    <p class="txt-s-36 txt-w-600">Get In Touch With Us</p>
+    <policies-component></policies-component>
     <!--Must import footer.js for this to work-->
     <footer-component></footer-component>
   </body>
