--- a/singleproduct.html
+++ b/singleproduct.html
@@ -54,38 +54,22 @@
         <span class="product-name txt-s-42 txt-w-400"></span>
         <span class="product-price txt-s-24 txt-w-500"></span>
         <form id="variation">
+
           <div class="product-rating">
             <div class="star-rating"></div>
             <span class="rating-count"></span>
           </div>
+
           <span class="product-description-brief"></span>
-          <div class="product-variation">
-            <p class="txt-s-14 txt-caption" style="margin-bottom:12px">Size</p>
-            <div class="variation-size">
-              <input type="radio" name="size" value="S" id="size-S" required>
-              <label class="size" for="size-S">S</label>
-              <input type="radio" name="size" value="M" id="size-M">
-              <label class="size" for="size-M">M</label>
-              <input type="radio" name="size" value="L" id="size-L">
-              <label class="size" for="size-L">L</label>
-              <input type="radio" name="size" value="XL" id="size-XL">
-              <label class="size" for="size-XL">XL</label>
-              <input type="radio" name="size" value="XS" id="size-XS">
-              <label class="size" for="size-XS">XS</label>
-            </div>
-            <p class="txt-s-14 txt-caption" style="margin-bottom:12px">Color</p>
-            <div class="variation-color">
-              <input type="radio" name="color" value="red" id="red" required>
-              <label class="color" for="red" style="background-color: lightpink"></label>
-              <input type="radio" name="color" value="blue" id="blue">
-              <label class="color" for="blue" style="background-color: lightblue"></label>
-            </div>
-          </div>
+
+          <div class="product-variation"></div>
+
           <div class="quantity-ctn">
             <span class="quantity-btn decrement prevent-select">-</span>
             <input type="number" name="quantity" value="1" class="quantity">
             <span class="quantity-btn increment prevent-select">+</span>
           </div>
+
           <button class="add-to-cart-btn" type="submit">Add To Cart</button>
         </form>
         <hr class="hr">
