update: cart side bar

--- a/account.html
+++ b/account.html
@@ -5,15 +5,15 @@
     <link rel="stylesheet" href="./css/general.css">
     <link rel="stylesheet" href="./css/banner.css">
     <title>My Account</title>
-    <script src="./scripts/header.js"></script>
-    <script src="./scripts/footer.js"></script>
+    <script type="module" src="./scripts/header.js"></script>
+    <script type="module" src="./scripts/footer.js"></script>
     <script src="./scripts/policies.js"></script>
 
     <style>
       form {
         margin: 0;
       }
-      
+
       .main-container {
         margin: 65px 100px;
         display: flex;
