--- a/checkout.html
+++ b/checkout.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="./css/general.css">
     <link rel="stylesheet" href="./css/banner.css">
     <title>Checkout</title>
-    <script src="scripts/header.js"></script>
-    <script src="scripts/footer.js"></script>
+    <script type="module" src="scripts/header.js"></script>
+    <script type="module" src="scripts/footer.js"></script>
   </head>
   <body>
     <!--Must import header.js for this to work-->
