--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="./css/general.css">
     <link rel="stylesheet" href="./css/banner.css">
     <title>Contact</title>
-    <script src="scripts/header.js"></script>
-    <script src="scripts/footer.js"></script>
-    <script src="scripts/policies.js"></script>
+    <script type="module" src="scripts/header.js"></script>
+    <script type="module" src="scripts/footer.js"></script>
+    <script type="module" src="scripts/policies.js"></script>
   </head>
   <body>
     <!--Must import header.js for this to work-->
