--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html lang="en">
   <head>
     <title>Home</title>
-    <meta http-equiv="content-type" content="text/html" charset="utf-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/general.css">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/product.css">
-    <script src="./scripts/header.js"></script>
-    <script src="./scripts/footer.js"></script>
+    <script type="module" src="./scripts/header.js"></script>
+    <script type="module" src="./scripts/footer.js"></script>
     <script type="module" src="./scripts/home.js"></script>
   </head>
   <body>
