--- a/shop.html
+++ b/shop.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="./css/general.css">
     <link rel="stylesheet" href="./css/shop.css">
     <link rel="stylesheet" href="./css/banner.css">
-    <script src="./scripts/header.js"></script>
-    <script src="./scripts/footer.js"></script>
-    <script src="./scripts/policies.js"></script>
+    <script type="module" src="./scripts/header.js"></script>
+    <script type="module" src="./scripts/footer.js"></script>
+    <script type="module" src="./scripts/policies.js"></script>
     <script type="module" src="./scripts/shop.js"></script>
   </head>
   <body>
