--- a/singleproduct.html
+++ b/singleproduct.html
@@ -1,12 +1,12 @@
 <html lang="en">
   <head>
+    <title>Shop</title>
     <meta http-equiv="content-type" content="text/html" charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/general.css">
     <link rel="stylesheet" href="./css/singleproduct.css">
-    <title>Shop</title>
     <script type="module" src="./scripts/header.js"></script>
-    <script src="./scripts/footer.js"></script>
+    <script type="module" src="./scripts/footer.js"></script>
     <script type="module" src="./scripts/singleproduct.js"></script>
   </head>
   <body>
