--- a/cart.html
+++ b/cart.html
@@ -1,16 +1,19 @@
 <html lang="en">
   <head>
-    <meta http-equiv="content-type" content="text/html" charset="utf-8">
+    <title>Cart</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/general.css">
     <link rel="stylesheet" href="./css/banner.css">
-    <title>Cart</title>
-    <script src="scripts/header.js"></script>
-    <script src="scripts/footer.js"></script>
+    <link rel="stylesheet" href="./css/cart.css">
+    <script type="module" src="scripts/header.js"></script>
+    <script type="module" src="scripts/footer.js"></script>
+    <script type="module" src="scripts/policies.js"></script>
+    <script type="module" src="scripts/cart_page.js"></script>
   </head>
   <body>
-    <!--Must import header.js for this to work-->
     <header-component></header-component>
+
     <div class="banner">
       <img class="banner-background" src="./assets/imgs/thumbnail_breadcrumb.jpg">
       <div>
@@ -22,7 +25,26 @@
         </div>
       </div>
     </div>
-    <!--Must import footer.js for this to work-->
+
+    <div class="main-cart-ctn"> 
+      <div class="cart-item-table"> </div>
+      <div class="cart-totals">
+        <p class="txt-s-32 txt-w-600">Cart Totals</p>
+        <div class="price-totals">
+          <p class="flex-sb">
+            <span class="txt-w-500">Subtotal</span>
+            <span class="txt-caption js-cart-subtotal">Rs. 0.00</span>
+          </p>
+          <p class="flex-sb">
+            <span class="txt-w-500">Total</span>
+            <span class="price-medium js-cart-subtotal" id="total">Rs. 0.00</span>
+          </p>
+        </div>
+        <a class="checkout-btn" href="./checkout.html">Checkout</a>
+      </div>
+    </div>
+
+    <policies-component></policies-component>
     <footer-component></footer-component>
   </body>
 </html>
