--- a/checkout.html
+++ b/checkout.html
@@ -22,6 +22,88 @@
         </div>
       </div>
     </div>
+    <div class="">
+      <form action="">
+        <span class="title txt-w-600 txt-s-36">Billing details</span>
+        <div class="input-infor">
+          <label for="firstname">First Name</label>
+          <input name="firstname" type="text" placeholder="">
+          <label for="lastname">Last Name</label>
+          <input name="lastname" type="text" placeholder="">
+          <br>
+          <label for="companyname">Compeny Name(Optional)</label>
+          <input name="companyname" type="text" placeholder="">
+          <br>
+          <label for="Contry">Contry/Region</label>
+          <select name="country" id="Contry">
+            <option value=""></option>
+            <option value="srilanka">Sri Lanka</option>
+            <option value="china">China</option>
+            <option value="australia">Australia</option>
+            <option value="iraq">Iraq</option>
+            <option value="cambodia">Cambodia</option>
+            <option value="vietnam">Viet Nam</option>
+        </select>
+        <br>
+        <label for="street-address">Street Address</label>
+        <input name="street-address" type="text" placeholder="">
+        <br>
+        <label for="town-city">Town / City</label>
+        <input name="town-city" type="text" placeholder="">
+        <br>
+        <label for="province">Province</label>
+          <select name="country" id="Contry">
+            <option value=""></option>
+            <option value="shanghai">Shanghai</option>
+            <option value="hanoi">Ha Noi</option>
+            <option value="sydney">Sydney</option>
+            <option value="baghdad">Baghdad</option>
+            <option value="phnom-penh">Phnom Penh</option>
+            <option value="melbourne">Melbourne</option>
+        </select>
+        <br>
+        <label for="zip-code">Zip code</label>
+        <input name="zip-code" type="text" placeholder="">
+        <br>
+        <label for="phone">Phone</label>
+        <input name="phone" type="text" placeholder="">
+        <br>
+        <label for="email-address">Email address</label>
+        <input name="email-address" type="text" placeholder="">
+        <br>
+        <label for="additional-infor"></label>
+        <input name="additional-infor" type="text" placeholder="Additional information">
+        </div>
+        <div>
+          <table>
+            <tr>
+              <th>Product</th>
+              <th>Subtotal</th>
+            </tr>
+            <tr>
+              <th>Asgaard sofa x1</th>
+              <th>Rs.250,000.00</th>
+            </tr>
+            <tr>
+              <th>Subtotal</th>
+              <th>Rs.250,000.00</th>
+            </tr>
+            <tr>
+              <th>Total</th>
+              <th>Rs.250,000.00</th>
+            </tr>
+          </table>
+          <div>
+          <input type="radio" name="payment-method" value="direct-bank-transfer">Direct Bank Tranfer
+          <p>Make your payment directly into our bank account. Please use your Order ID as the payment reference. Your order will not be shipped until the funds have cleared in our account.</p>
+          <input type="radio" name="payment-method" value="cash-on-delivery">Cash On Delivery
+          <p>Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our privacy policy.</p>
+          </div>
+          <button name="Place-order" value="OK" type="button" onclick="order()">Place order</button>  
+        </div>
+      </form>
+      
+    </div>
     <!--Must import footer.js for this to work-->
     <footer-component></footer-component>
   </body>
