--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/general.css">
     <link rel="stylesheet" href="./css/banner.css">
+    <link rel="stylesheet" href="./css/contact.css">
     <title>Contact</title>
     <script type="module" src="scripts/header.js"></script>
     <script type="module" src="scripts/footer.js"></script>
@@ -24,7 +25,58 @@
       </div>
     </div>
 
-    <p class="txt-s-36 txt-w-600">Get In Touch With Us</p>
+    <div class="main-ctn">
+      <div class="title">
+        <p class="txt-s-36 txt-w-600">Get In Touch With Us</p>
+        <p class="txt-caption">For More Information About Our Product & Services. Please Feel Free To Drop Us An Email. Our Staff Always Be There To Help You Out. Do Not Hesitate!</p>
+      </div>
+      <div class="flex-row">
+        <div class="contact-info flex-col">
+          <div class="address">
+            <div class="flex-middle">
+              <img src="assets/icons/locpin.svg" width="22px" alt="">
+              <span class="txt-s-24 txt-w-500" style="margin-left:30px">Address</span>
+            </div>
+            <p style="margin-left:52px;">236 5th SE Avenue, New York NY10000, United States</p>
+          </div>
+          <div class="phone">
+            <div class="flex-middle">
+              <img src="assets/icons/phone.svg" width="22px" alt="">
+              <span class="txt-s-24 txt-w-500" style="margin-left:30px">Phone</span>
+            </div>
+            <p style="margin-left:52px;">Mobile: +(84) 546-6789<br>Hotline: +(84) 456-6789</p>
+          </div>
+          <div class="worktime">
+            <div class="flex-middle">
+              <img src="assets/icons/clock-fill.svg" width="22px" alt="">
+              <span class="txt-s-24 txt-w-500" style="margin-left:30px">Working Time</span>
+            </div>
+            <p style="margin-left:52px;">Monday-Friday: 9:00 - 22:00<br>Saturday-Sunday: 9:00 - 21:00</p>
+          </div>
+        </div>
+        <form id="contact-form">
+          <div class="input-flex">
+            <div class="input-field">
+              <label for="name">Your name</label>
+              <input name="name" type="text" placeholder="Abc">
+            </div>
+            <div class="input-field">
+              <label for="email">Email Address</label>
+              <input name="email" type="text" placeholder="Abc@def.com">
+            </div>
+            <div class="input-field">
+              <label for="subject">Subject</label>
+              <input name="subject" type="text" placeholder="This is an optional">
+            </div>
+            <div class="input-field">
+              <label for="message">Message</label>
+              <textarea name="message" id="message" placeholder="Hi! i’d like to ask about"></textarea>
+            </div>
+            <button type="submit">Submit</button>
+          </div>
+        </form>
+      </div>
+      </div>
     <policies-component></policies-component>
     <!--Must import footer.js for this to work-->
     <footer-component></footer-component>
